--- a/css/original.css
+++ b/css/original.css
@@ -22,21 +22,39 @@
   font-family: "DM Sans";
   font-weight: 600;
 }
-
 body {
+    background-color: transparent !important;  
+}
+section,html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+  background-color: none;
+}
+
+/* two sides */
+.top-section {
   background: linear-gradient(
     180deg,
     #000000 0%,
     #090d1e 49.79%,
-    #090d1e 101.7%
+    rgb(9, 13, 30) 101.7%
   );
+  /* background: url(../images/background.svg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-position: left top; */
   color: #f7f8fa;
 }
 
-section,html, body {
-  overflow-x: hidden;
-  max-width: 100vw;
+.bottom-section {
+  background-color: #F9F9F9;
+  color: #000000;
 }
+
 
 /*
  * Trust Badge
@@ -251,6 +269,8 @@ text-fill-color: transparent;
 .faq {
   padding: 100px 0;
   position: relative;
+  background-color: #f9f9f9;
+  color: #000000;
 }
 
 .faq h1 {
